pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: dev
  labels:
    app: fd-app
spec:
  containers:
    - name: app
      image: quay.io/bannerbschafer/k8s-demo
      ports:
        - containerPort: 3000
