service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  selector:
    app: fd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
